--- a/src/assets/styles/main.sass
+++ b/src/assets/styles/main.sass
@@ -15,7 +15,7 @@
 html
     body
         margin: 0
-        background: radial-gradient(96.91% 121.32% at 1.49% 17.97%, rgba(117, 80, 174, 0.00) 46.5%, rgba(117, 80, 174, 0.50) 100%), radial-gradient(91.35% 111.13% at 12.96% 16.43%, rgba(117, 80, 174, 0.00) 46.5%, rgba(117, 80, 174, 0.50) 100%), var(--Color, #202020)
+        background: radial-gradient(96.91% 121.32% at 1.49% 17.97%, rgba(117, 80, 174, 0.00) 46.5%, rgba(37, 37, 71, 0.50) 100%), radial-gradient(91.35% 111.13% at 12.96% 16.43%, rgba(117, 80, 174, 0.00) 46.5%, rgba(30, 34, 63, 0.50) 100%), var(--Color, #202020)
         margin: 0
         font-family: 'Roboto', sans-serif    
         text-align: center
@@ -30,13 +30,14 @@ html
             flex-direction: column
             min-height: 100vh
             main
-                padding-top: 60px
                 display: flex
                 flex-direction: column
-                margin-top: 48px
+                margin-top: 60px
                 margin-bottom: 120px
                 @media (min-width: 992px)
-                    margin-top: 120px
+                    padding-top: 60px
+                    margin-top: 0
+                    
             footer
                 margin-top: auto
 .k-container
