--- a/src/assets/styles/main.sass
+++ b/src/assets/styles/main.sass
@@ -13,6 +13,10 @@
     src: url("@/assets/fonts/exo2.ttf") format('truetype')
     font-style: normal
 @font-face
+    font-family: "orbitron"
+    src: url("@/assets/fonts/Orbitron.ttf") format('truetype')
+    font-style: normal
+@font-face
     font-family: "Audiowide"
     src: url("@/assets/fonts/Audiowide-Regular.ttf") format('truetype')
 
@@ -21,6 +25,7 @@
     font-weight: 50
 html
     body
+        overflow-x: hidden
         margin: 0
         background: radial-gradient(96.91% 121.32% at 1.49% 17.97%, rgba(117, 80, 174, 0.00) 46.5%, rgba(37, 37, 71, 0.50) 100%), radial-gradient(91.35% 111.13% at 12.96% 16.43%, rgba(117, 80, 174, 0.00) 46.5%, rgba(30, 34, 63, 0.50) 100%), var(--Color, #202020)
         margin: 0
